# dae-equiv-judge

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  requirements.txt  test_all.py  test_one_case.py
dae_equiv_judge/: equation_group.py  latex_to_eq_group.py  one_calculation.py
test_data/test_data_latex/: CSTR_1storder01_1.tex  CSTR_1storder01_2.tex  CSTR_1storder01_3.tex  CSTR_1storder02_1.tex  CSTR_1storder02_2.tex  CSTR_1storder02_3.tex  CSTR_2ndorder01_1.tex  CSTR_2ndorder01_2.tex  CSTR_2ndorder01_3.tex  batch_reactor01_1.tex  batch_reactor01_2.tex  biodiesel01_1_1.tex  biodiesel01_2_1.tex  biodiesel02_1_1.tex  biodiesel02_2_1.tex  blending01_1.tex  blending01_2.tex  elec_heat_tank01_1.tex  elec_heat_tank01_2.tex  elec_heat_tank01_3.tex  liquid_storage01_1.tex  liquid_storage01_2.tex  massbalance01_1.tex  massbalance01_2.tex  massbalance02_1.tex  simple01_1.tex  simple01_2.tex  simple02_1.tex  simple03_1.tex  simple03_2.tex  simple04_1.tex  simple05_1.tex  simple05_2.tex  simple06_1.tex  three_absorber01_1.tex  three_absorber01_2.tex  three_absorber01_3.tex  three_stirred_tank01_1.tex  three_stirred_tank01_2.tex  three_stirred_tank02_1.tex  (+5 more)
